mock data - get more torrents easily with helper function file system dialog - overhaul styles & overflow issues with many folders

--- a/src/app/file-system-dialog/file-system-dialog.component.css
+++ b/src/app/file-system-dialog/file-system-dialog.component.css
@@ -4,12 +4,33 @@
 
 .file-systme-explorer-container {
     min-height: 50vh;
+
+    display: flex;
+    flex-direction: row;
 }
 
 .leftNavigation {
     padding-left: 0;
+    flex-grow: 1;
+
+    max-width: 200px;
+    max-height: 500px;
+
+    overflow: scroll;
+}
+
+.directoryContents {
+    flex-grow: 4;
+
+    max-height: 500px;
+
+    overflow: scroll;
 }
 
 #saveLocation {
     font-size: medium;
+}
+
+#isFolderSelected {
+    justify-self: flex-end;
 }
